# Local_TTS

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  run.ps1  runtime.local.json.example  runtime.repo.json  setup_whisper_cpp.ps1
src/: app_config.cpp  app_config.h  audio_capture.cpp  audio_capture.h  dashboard.cpp  dashboard.h  diagnostics.cpp  diagnostics.h  live_mode.cpp  live_mode.h  llm_correction.cpp  llm_correction.h  main.cpp  paths.cpp  paths.h  pipeline_debug.cpp  pipeline_debug.h  streaming_dictation.cpp  streaming_dictation.h  text_injection.cpp  text_injection.h  whisper_runner.cpp  whisper_runner.h
src/local_tts/: cli.py  paths.py
